Introduce input service Introduce player movement input

--- a/Assets/Code/ECS/Client/Client.asmdef
+++ b/Assets/Code/ECS/Client/Client.asmdef
@@ -5,7 +5,9 @@
         "Shared",
         "Leopotam.EcsLite",
         "Zenject",
-        "Markers"
+        "Markers",
+        "Services",
+        "Utils"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
