--- a/Assets/Code/ECS/Client/Client.asmdef
+++ b/Assets/Code/ECS/Client/Client.asmdef
@@ -7,7 +7,8 @@
         "Zenject",
         "Markers",
         "Services",
-        "Utils"
+        "Utils",
+        "Server"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
