--- a/Assets/Code/ECS/Client/Client.asmdef
+++ b/Assets/Code/ECS/Client/Client.asmdef
@@ -8,7 +8,8 @@
         "Markers",
         "Services",
         "Utils",
-        "Server"
+        "Server",
+        "Data"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
