--- a/Assets/Code/Services/Services.asmdef
+++ b/Assets/Code/Services/Services.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "Zenject",
-        "Markers"
+        "Markers",
+        "Data"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
