Refactor systems Move player initialization to "server-side"

--- a/Assets/Code/ECS/Server/Server.asmdef
+++ b/Assets/Code/ECS/Server/Server.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "Shared",
-        "Leopotam.EcsLite"
+        "Leopotam.EcsLite",
+        "Zenject",
+        "Services"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
