--- a/Assets/Code/Data/Data.asmdef
+++ b/Assets/Code/Data/Data.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Data"
+    "name": "Data",
+    "rootNamespace": "",
+    "references": [
+        "Shared"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
