--- a/Assets/Code/Services/Services.asmdef
+++ b/Assets/Code/Services/Services.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Zenject",
         "Markers",
-        "Data"
+        "Data",
+        "Shared"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
